i hope to fix all bug

--- a/templates/Login.html
+++ b/templates/Login.html
@@ -37,7 +37,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary w-100">تسجيل الدخول</button>
                 <div class="text-center mt-3">
-                    <a href="{%  url 'sighup' %}" class="text-decoration-none">إنشاء حساب جديد</a>
+                    <a href="{%  url 'signup' %}" class="text-decoration-none">إنشاء حساب جديد</a>
                 </div>
             </form>
         </div>
