--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -12,7 +12,7 @@
             <h1 class="mb-4">QuickChat! مرحباً بك في</h1>
             <p class="mb-4">قم بتسجيل الدخول أو إنشاء حساب للبدء.</p>
             <a href="{% url 'login' %}" class="btn btn-primary me-2">تسجيل الدخول</a>
-            <a href="{% url 'sighup' %}" class="btn btn-outline-primary">إنشاء حساب</a>
+            <a href="{% url 'signup' %}" class="btn btn-outline-primary">إنشاء حساب</a>
         </div>
     </div>
 </body>
